Add dynamic category management and apartment history features

--- a/index.html
+++ b/index.html
@@ -82,8 +82,18 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#" onclick="showSection('history')">
+                                <i class="fas fa-history"></i> Historial
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#" onclick="showSection('reports')">
                                 <i class="fas fa-file-alt"></i> Reportes
+                            </a>
+                        </li>
+                        <li class="nav-item admin-only">
+                            <a class="nav-link" href="#" onclick="showSection('settings')">
+                                <i class="fas fa-cog"></i> Configuración
                             </a>
                         </li>
                     </ul>
@@ -284,6 +294,123 @@
                                             <!-- Data will be loaded here -->
                                         </tbody>
                                     </table>
+                                </div>
+                            </div>
+                
+                            <!-- Settings -->
+                            <div id="settings-section" class="section d-none">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h2><i class="fas fa-cog"></i> Configuración del Sistema</h2>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h5><i class="fas fa-tags"></i> Categorías de Gastos</h5>
+                                            </div>
+                                            <div class="card-body">
+                                                <p>Gestiona las categorías disponibles para clasificar gastos.</p>
+                                                <button class="btn btn-primary" onclick="showCategoryModal()">
+                                                    <i class="fas fa-plus"></i> Gestionar Categorías
+                                                </button>
+                                            </div>
+                                
+                                            <!-- History -->
+                                            <div id="history-section" class="section d-none">
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <h2><i class="fas fa-history"></i> Historial por Apartamento</h2>
+                                                        <hr>
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <div class="col-md-4">
+                                                        <label class="form-label">Seleccionar Apartamento</label>
+                                                        <select class="form-control" id="historyApartmentSelect" onchange="loadApartmentHistory()">
+                                                            <option value="">Seleccione un apartamento...</option>
+                                                            <!-- Options will be loaded dynamically -->
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <label class="form-label">Tipo de Historial</label>
+                                                        <select class="form-control" id="historyTypeSelect" onchange="loadApartmentHistory()">
+                                                            <option value="all">Todo</option>
+                                                            <option value="payments">Pagos</option>
+                                                            <option value="expenses">Gastos Relacionados</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="col-md-4">
+                                                        <label class="form-label">Período</label>
+                                                        <select class="form-control" id="historyPeriodSelect" onchange="loadApartmentHistory()">
+                                                            <option value="all">Todo el tiempo</option>
+                                                            <option value="6months">Últimos 6 meses</option>
+                                                            <option value="3months">Últimos 3 meses</option>
+                                                            <option value="1month">Último mes</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <div id="apartmentSummary" class="alert alert-info d-none">
+                                                            <!-- Apartment summary will be shown here -->
+                                                        </div>
+                                                        <div class="card">
+                                                            <div class="card-body">
+                                                                <div class="table-responsive">
+                                                                    <table class="table table-striped" id="historyTable">
+                                                                        <thead>
+                                                                            <tr>
+                                                                                <th>Fecha</th>
+                                                                                <th>Tipo</th>
+                                                                                <th>Concepto</th>
+                                                                                <th>Monto</th>
+                                                                                <th>Estado</th>
+                                                                                <th>Detalles</th>
+                                                                            </tr>
+                                                                        </thead>
+                                                                        <tbody id="historyTableBody">
+                                                                            <tr>
+                                                                                <td colspan="6" class="text-center text-muted">
+                                                                                    Seleccione un apartamento para ver su historial
+                                                                                </td>
+                                                                            </tr>
+                                                                        </tbody>
+                                                                    </table>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <h5><i class="fas fa-database"></i> Datos del Sistema</h5>
+                                            </div>
+                                            <div class="card-body">
+                                                <p>Información sobre los datos almacenados en el sistema.</p>
+                                                <div class="row text-center">
+                                                    <div class="col-4">
+                                                        <h4 id="totalApartmentsCount">0</h4>
+                                                        <small>Apartamentos</small>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <h4 id="totalPaymentsCount">0</h4>
+                                                        <small>Pagos</small>
+                                                    </div>
+                                                    <div class="col-4">
+                                                        <h4 id="totalExpensesCount">0</h4>
+                                                        <small>Gastos</small>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -512,14 +639,14 @@
                     <form id="expenseForm">
                         <div class="mb-3">
                             <label class="form-label">Categoría</label>
-                            <select class="form-control" id="expenseCategory" required>
-                                <option value="Servicios">Servicios</option>
-                                <option value="Seguridad">Seguridad</option>
-                                <option value="Limpieza">Limpieza</option>
-                                <option value="Reparaciones">Reparaciones</option>
-                                <option value="Administración">Administración</option>
-                                <option value="Seguros">Seguros</option>
-                            </select>
+                            <div class="input-group">
+                                <select class="form-control" id="expenseCategory" required>
+                                    <!-- Options will be loaded dynamically -->
+                                </select>
+                                <button class="btn btn-outline-secondary" type="button" onclick="addNewCategoryFromExpense()" title="Añadir nueva categoría">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
@@ -548,6 +675,41 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                     <button type="button" class="btn btn-primary" onclick="saveExpense()">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Category Management Modal -->
+    <div class="modal fade" id="categoryModal" tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title"><i class="fas fa-tags"></i> Gestionar Categorías de Gastos</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <button class="btn btn-success" onclick="addNewCategory()">
+                            <i class="fas fa-plus"></i> Añadir Nueva Categoría
+                        </button>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Categoría</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody id="categoriesTableBody">
+                                <!-- Categories will be loaded here -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
