Fix empty content issues in History and Settings sections

--- a/index.html
+++ b/index.html
@@ -411,6 +411,15 @@
                                                         <small>Gastos</small>
                                                     </div>
                                                 </div>
+                                                <hr>
+                                                <div class="text-center">
+                                                    <button class="btn btn-info btn-sm" onclick="exportData()">
+                                                        <i class="fas fa-download"></i> Exportar Datos
+                                                    </button>
+                                                    <button class="btn btn-warning btn-sm ms-2" onclick="importData()">
+                                                        <i class="fas fa-upload"></i> Importar Datos
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
